@@ -1,3 +1,8 @@
+2009-09-29  Peter Bergner  <bergner@vnet.ibm.com>
+
+	* ppc-opc.c (powerpc_opcodes): Remove support for the the "lxsdux",
+	"lxvd2ux", "lxvw4ux", "stxsdux", "stxvd2ux" and "stxvw4ux" opcodes.
+
 2009-09-23  Nick Clifton  <nickc@redhat.com>
 
 	* po/fr.po: Updated French translation.
